// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation Form - Renders Correctly 1`] = `
<div>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Create League"
  />
   
  <div
    class="flex flex-col flex-grow h-full"
  >
    <header
      class="text-gray-900 bg-white"
    >
      <div
        class="max-w-screen-xl px-6 pb-6 mx-auto lg:px-8 pt-6"
      >
        <h1
          class="text-3xl font-bold leading-tight font-heading"
        >
          
          Create League
        
        </h1>
      </div>
    </header>
     
    <main
      class="flex flex-col flex-grow"
    >
      <!---->
       
      <!---->
       
      <div
        class="flex-grow bg-white"
      >
        <div
          class="max-w-screen-xl pb-8 mx-auto sm:pb-10 xl:pb-12 lg:px-8 sm:px-6"
        >
          <div
            class="grid grid-cols-2 gap-6 px-6 sm:px-0 sm:gap-8"
          >
            <form
              class="col-span-2"
            >
              <div>
                <label
                  class="block pb-1 select-none font-heading text-gray-600"
                  for="Name:"
                >
                  
    Name:
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Name:"
                  type="text"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading text-gray-600"
                  for="Year:"
                >
                  
    Year:
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Year:"
                  max="2050"
                  min="0"
                  type="number"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 select-none font-heading text-gray-600"
                  for="Description:"
                >
                  
    Description:
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Description:"
                  type="text"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 select-none font-heading text-gray-600"
                  for="Website: (URL)"
                >
                  
    Website: (URL)
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Website: (URL)"
                  type="url"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 select-none font-heading text-gray-600"
                  for="Coordinator:"
                >
                  
    Coordinator:
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Coordinator:"
                  type="text"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 select-none font-heading text-gray-600"
                  for="Scoring Method:"
                >
                  
    Scoring Method:
  
                </label>
                 
                <div
                  class="relative"
                >
                  <span
                    class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
                  >
                    <svg
                      class="w-5 h-5 text-gray-400"
                      fill="none"
                      stroke="currentColor"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 9l-7 7-7-7"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                   
                  <select
                    class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                    id="Scoring Method:"
                  >
                    <option />
                     
                    <option
                      value="Position Based (100 Max)"
                    >
                      
          Position Based (100 Max)
        
                    </option>
                    <option
                      value="Position Based (99 Max)"
                    >
                      
          Position Based (99 Max)
        
                    </option>
                    <option
                      value="Position Based (50 Max)"
                    >
                      
          Position Based (50 Max)
        
                    </option>
                    <option
                      value="Position Based (100 Max, Double Points)"
                    >
                      
          Position Based (100 Max, Double Points)
        
                    </option>
                    <option
                      value="Position Based (50 Max, Double Points)"
                    >
                      
          Position Based (50 Max, Double Points)
        
                    </option>
                    <option
                      value="Position Based (99 Max, Reduced in a Draw)"
                    >
                      
          Position Based (99 Max, Reduced in a Draw)
        
                    </option>
                    <option
                      value="Relative to Average Time (1000 Average)"
                    >
                      
          Relative to Average Time (1000 Average)
        
                    </option>
                    <option
                      value="Relative to Average Time (100 Average)"
                    >
                      
          Relative to Average Time (100 Average)
        
                    </option>
                    <option
                      value="From Upload File"
                    >
                      
          From Upload File
        
                    </option>
                  </select>
                </div>
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading text-gray-600"
                  for="Number of Events to Count:"
                >
                  
    Number of Events to Count:
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Number of Events to Count:"
                  max="100"
                  min="1"
                  type="number"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 select-none font-heading text-gray-600"
                  for="Courses: (Comma Separated)"
                >
                  
    Courses: (Comma Separated)
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Courses: (Comma Separated)"
                  type="text"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 select-none font-heading text-gray-600"
                  for="More Information:"
                >
                  
    More Information:
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="More Information:"
                  type="text"
                />
              </div>
               
              <button
                class="mt-8 button-lg"
              >
                Create League
              </button>
            </form>
          </div>
        </div>
      </div>
    </main>
     
    <!---->
  </div>
</div>
`;

exports[`Update Form - Renders Correctly 1`] = `
<div>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Edit League"
  />
   
  <div
    class="flex flex-col flex-grow h-full"
  >
    <header
      class="text-gray-900 bg-white"
    >
      <div
        class="max-w-screen-xl px-6 pb-6 mx-auto lg:px-8 pt-6"
      >
        <h1
          class="text-3xl font-bold leading-tight font-heading"
        >
          
          Edit League
        
        </h1>
      </div>
    </header>
     
    <main
      class="flex flex-col flex-grow"
    >
      <!---->
       
      <!---->
       
      <div
        class="flex-grow bg-white"
      >
        <div
          class="max-w-screen-xl pb-8 mx-auto sm:pb-10 xl:pb-12 lg:px-8 sm:px-6"
        >
          <div
            class="grid grid-cols-2 gap-6 px-6 sm:px-0 sm:gap-8"
          >
            <form
              class="col-span-2"
            >
              <div>
                <label
                  class="block pb-1 select-none font-heading text-gray-600"
                  for="Name:"
                >
                  
    Name:
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Name:"
                  type="text"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading text-gray-600"
                  for="Year:"
                >
                  
    Year:
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Year:"
                  max="2050"
                  min="0"
                  type="number"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 select-none font-heading text-gray-600"
                  for="Description:"
                >
                  
    Description:
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Description:"
                  type="text"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 select-none font-heading text-gray-600"
                  for="Website: (URL)"
                >
                  
    Website: (URL)
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Website: (URL)"
                  type="url"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 select-none font-heading text-gray-600"
                  for="Coordinator:"
                >
                  
    Coordinator:
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Coordinator:"
                  type="text"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 select-none font-heading text-gray-600"
                  for="Scoring Method:"
                >
                  
    Scoring Method:
  
                </label>
                 
                <div
                  class="relative"
                >
                  <span
                    class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
                  >
                    <svg
                      class="w-5 h-5 text-gray-400"
                      fill="none"
                      stroke="currentColor"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 9l-7 7-7-7"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                   
                  <select
                    class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                    id="Scoring Method:"
                  >
                    <option />
                     
                    <option
                      value="Position Based (100 Max)"
                    >
                      
          Position Based (100 Max)
        
                    </option>
                    <option
                      value="Position Based (99 Max)"
                    >
                      
          Position Based (99 Max)
        
                    </option>
                    <option
                      value="Position Based (50 Max)"
                    >
                      
          Position Based (50 Max)
        
                    </option>
                    <option
                      value="Position Based (100 Max, Double Points)"
                    >
                      
          Position Based (100 Max, Double Points)
        
                    </option>
                    <option
                      value="Position Based (50 Max, Double Points)"
                    >
                      
          Position Based (50 Max, Double Points)
        
                    </option>
                    <option
                      value="Position Based (99 Max, Reduced in a Draw)"
                    >
                      
          Position Based (99 Max, Reduced in a Draw)
        
                    </option>
                    <option
                      value="Relative to Average Time (1000 Average)"
                    >
                      
          Relative to Average Time (1000 Average)
        
                    </option>
                    <option
                      value="Relative to Average Time (100 Average)"
                    >
                      
          Relative to Average Time (100 Average)
        
                    </option>
                    <option
                      value="From Upload File"
                    >
                      
          From Upload File
        
                    </option>
                  </select>
                </div>
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 text-gray-600 select-none font-heading text-gray-600"
                  for="Number of Events to Count:"
                >
                  
    Number of Events to Count:
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Number of Events to Count:"
                  max="100"
                  min="1"
                  type="number"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 select-none font-heading text-gray-600"
                  for="Courses: (Comma Separated)"
                >
                  
    Courses: (Comma Separated)
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="Courses: (Comma Separated)"
                  type="text"
                />
              </div>
               
              <div
                class="mt-4"
              >
                <label
                  class="block pb-1 select-none font-heading text-gray-600"
                  for="More Information:"
                >
                  
    More Information:
  
                </label>
                 
                <input
                  class="w-full px-3 py-2 font-sans text-gray-900 transition duration-300 ease-in-out bg-white border outline-none appearance-none rounded-shape focus:shadow-outline focus:border-main-400"
                  id="More Information:"
                  type="text"
                />
              </div>
               
              <button
                class="mt-8 button-lg"
              >
                Update League
              </button>
            </form>
          </div>
        </div>
      </div>
    </main>
     
    <!---->
  </div>
</div>
`;
